# state-observation

./: CMakeLists.txt
include/state-observation/tools/: definitions.hxx  rigid-body-kinematics.hpp  rigid-body-kinematics.hxx
misc-tools/: CMakeLists.txt
src/: CMakeLists.txt
unit-testings/: CMakeLists.txt  test-kalman-filter.cpp
