macro(add_so_executable NAME)
  add_executable(${NAME} ${NAME}.cpp)
  target_link_libraries(${NAME} PRIVATE ${PROJECT_NAME} Boost::filesystem Boost::unit_test_framework)
endmacro()

macro(add_so_test NAME)
  add_so_executable(${NAME})
  add_test(${NAME} ${NAME})
endmacro()

add_so_test(test-kalman-filter)
add_so_test(test-kalman-filter-template)
add_so_test(imu-test)
add_so_test(imu-multiplicative-test)
add_so_test(HRP2LAAS-IMU-Observation)
add_so_test(flex-estimation-test)
add_so_test(simple-flex-estimation-test)
add_so_test(other-tests)
add_so_test(test_acceleration_stabilization)
add_so_test(test_imu-elastic-local-frame-dynamical-system)
add_so_test(test_model-base-ekf-flex-estimator-imu)
add_so_test(test_model-base-ekf-flex-estimator-imu_withComBias_withForcesSensors)
add_so_test(zmpEstimation)

add_so_executable(real-offline-flexibility-estimator)
